--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-sass": "^2.1.12",
     "gatsby-plugin-sharp": "^2.2.9",
     "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-remark": "^2.6.19",
     "gatsby-transformer-sharp": "^2.2.5",
     "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.12.0",
