--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,13 +7,19 @@ collections:
     label: 'Blog'
     folder: 'data/blog'
     create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: '{{slug}}'
     fields:
       - {
           label: 'Template Key',
           name: 'templateKey',
           widget: 'hidden',
-          default: 'blog-post',
+          default: 'BlogPost',
+        }
+      - {
+          label: 'Author',
+          name: 'author',
+          widget: 'hidden',
+          default: 'Dick Wyn Yong',
         }
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
