--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "gatsby": "^2.13.44",
     "gatsby-image": "^2.2.7",
+    "gatsby-plugin-dark-mode": "^1.1.0",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-offline": "^2.2.4",
