--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-image": "^2.2.7",
     "gatsby-plugin-dark-mode": "^1.1.0",
     "gatsby-plugin-manifest": "^2.2.4",
+    "gatsby-plugin-netlify": "^2.1.12",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.2",
