--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby": "^2.13.44",
     "gatsby-image": "^2.2.7",
     "gatsby-plugin-dark-mode": "^1.1.0",
+    "gatsby-plugin-google-analytics": "^2.1.17",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-netlify": "^2.1.12",
     "gatsby-plugin-netlify-cms": "^4.1.6",
