--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "lint": "eslint \"src/**/*.js\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-brands-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "gatsby": "^2.13.44",
     "gatsby-image": "^2.2.7",
     "gatsby-plugin-dark-mode": "^1.1.0",
