(feat) route existing wordpress traffic back to wordpress

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "@reach/router": "^1.2.1",
     "gatsby": "^2.13.44",
     "gatsby-image": "^2.2.7",
     "gatsby-plugin-dark-mode": "^1.1.0",
