--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-source-filesystem": "^2.1.6",
     "gatsby-transformer-remark": "^2.6.19",
     "gatsby-transformer-sharp": "^2.2.5",
+    "moment": "^2.24.0",
     "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
