--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "gatsby-transformer-sharp": "^2.2.5",
     "moment": "^2.24.0",
     "netlify-cms-app": "^2.9.7",
+    "node-fetch": "^2.6.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "unist-util-select": "^3.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
